apps/web/src/app/global.scss
@use 'libs/ui-styles/src/global.scss' as *;
@tailwind base;

@tailwind components;
@tailwind utilities;

* {
  border-color: hsl(var(--border));
}


html {
  -webkit-text-size-adjust: 100%;
  font-family: var(--font-sans), ui-sans-serif, system-ui, -apple-system,
    BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
    Noto Color Emoji;
  line-height: 1.5;
  tab-size: 4;
  scroll-behavior: smooth;
}

body {
  container-type: inline-size;
}


@media (prefers-color-scheme: dark) {
  :root {
    @include dark;
  }
}

